fixed storage issue with extension using session storage and not persistent extension storage

--- a/client/manifest.json
+++ b/client/manifest.json
@@ -5,7 +5,8 @@
   "description": "AI-powered YouTube content filter to help you stay focused on your allowed topics",
   
   "permissions": [
-    "storage"
+    "storage",
+    "activeTab"
   ],
   
   "host_permissions": [
